<resources>
    <string name="app_name">des_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_jum">Jum</string>
<string name="msg_virtual_consult">Virtual Consultantion</string>
<string name="lbl_4_321">4.321</string>
<string name="lbl_next">Next</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up.</string>
<string name="lbl_0_health">0% Health</string>
<string name="lbl_email_address">Email Address</string>
<string name="lbl_500_kcal">/500 kcal</string>
<string name="msg_idn_times_elb">IDN TIMES - Elbert Jolio</string>
<string name="msg_already_have_an">Already have an account? Sign In.</string>
<string name="msg_idn_times_est">IDN TIMES - Ester Ajeng</string>
<string name="msg_6_kebiasaan_pag">6 Kebiasaan Pagi yang Bisa Mengurangi Stres, yuk Praktikkan!</string>
<string name="msg_cegah_stunting">Cegah Stunting, PNM Gelar Penyuluhan Edukasi Gizi pada Ibu Nasabah PNM</string>
<string name="msg_dr_ahmad_nuraf2">Dr. Ahmad Nurafi adalah seorang dokter umum yang memiliki kompetensi dalam merawat berbagai penyakit umum. Beliau telah mengumpulkan pengalaman yang berharga dalam diagnosis dan perawatan pasien. Fokus utamanya adalah pencegahan penyakit dan memberikan pemahaman kesehatan kepada pasien.</string>
<string name="msg_yakni_rasa_ti">, yakni rasa tidak nyaman di perut dan merasa ingin muntah. Mual bisa dipicu berbagai hal, seperti kondisi pencernaan tertentu, sedang hamil, mencium bau menyengat atau busuk, atau karena virus.
Terlepas dari penyebabnya, mual adalah kondisi tak mengenakkan yang pastinya ingin segera kamu atasi. Ada banyak cara mengatasi mual secara alami. Simak penjelasannya di berikut ini</string>
<string name="lbl_140">140</string>
<string name="msg_penyakit_autoim">penyakit autoimun</string>
<string name="lbl_log_out">Log Out</string>
<string name="lbl_sign_in">Sign In</string>
<string name="lbl_edit">Edit</string>
<string name="lbl_selalu">Selalu</string>
<string name="msg_jakarta_idn_ti4">Jakarta, IDN Times -- PT Permodalan Nasional Madani (PNM) mengadakan kegiatan daring untuk penyuluhan edukasi gizi kepada 15.000 lebih ibu nasabah PNM di seluruh Indonesia. Berfokus pada kesehatan gizi anak dan keluarga, rangkaian ini dilaksanakan selama dua hari. Diisi oleh narasumber Putri Habibie, Passionate Homecook, dan dokter spesialis anak dan Founder @tentanganakofficial, dr. Mesty Ariotedjo, Sp.A, MPH.</string>
<string name="msg_jakarta_idn_ti3">Jakarta, IDN Times -- PT Permodalan Nasional Madani (PNM) mengadakan kegiatan daring untuk penyuluhan edukasi gizi kepada 15.000 lebih ibu nasabah PNM di seluruh Indonesia. Berfokus pada kesehatan gizi anak dan keluarga, rangkaian ini dilaksanakan selama dua hari. Diisi oleh narasumber Putri Habibie, Passionate Homecook, dan dokter spesialis anak dan Founder @tentanganakofficial, dr. Mesty Ariotedjo, Sp.A, MPH.

Membina perempuan prasejahtera untuk naik kelas bermakna komitmen besar bagi PNM. Sebagaimana yang diketahui, PNM tidak hanya memberikan modal ekonomi, tetapi juga pendampingan usaha.

</string>
<string name="msg_baca_selengkapn">Baca Selengkapnya di :</string>
<string name="lbl_sen">Sen</string>
<string name="msg_jakarta_idn_ti">Jakarta, IDN Times -- PT Permodalan Nasional Madani (PNM) mengadakan kegiatan daring untuk penyuluhan edukasi gizi kepada 15.000 lebih ibu nasabah PNM di seluruh Indonesia. Berfokus pada kesehatan gizi anak dan keluarga, rangkaian ini dilaksanakan selama dua hari. Diisi oleh narasumber Putri Habibie, Passionate Homecook, dan dokter spesialis anak dan Founder @tentanganakofficial, dr. Mesty Ariotedjo, Sp.A, MPH</string>
<string name="msg_jakarta_idn_ti2">Jakarta, IDN Times -- PT Permodalan Nasional Madani (PNM) mengadakan kegiatan daring untuk penyuluhan edukasi gizi kepada 15.000 lebih ibu nasabah PNM di seluruh Indonesia. Berfokus pada kesehatan gizi anak dan keluarga, rangkaian ini dilaksanakan selama dua hari. Diisi oleh narasumber Putri Habibie, Passionate Homecook, dan dokter spesialis anak dan Founder @tentanganakofficial, dr. Mesty Ariotedjo, Sp.A, MPH.

Membina perempuan prasejahtera untuk naik kelas bermakna komitmen besar bagi PNM. Sebagaimana yang diketahui, PNM tidak hanya memberikan modal ekonomi, tetapi juga pendampingan usaha.

1. PNM memperhatikan berbagai aspek pendukung kesejahteraan nasabahnya, termasuk kecukupan gizi serta kesehatan jasmani para ibu nasabah

 Melalui Divisi Pengembangan Kapasitas Usaha (PKU) berbagai pelatihan, program, dan pertemuan diperuntukkan kepada 14,6 juta nasabah PNM agar dapat terus mengembangkan usahanya.
Di sisi lain, PNM juga memperhatikan berbagai aspek yang dapat mendukung peningkatan kesejahteraan nasabahnya. Mengacu pada Poin 3 Sustainable Development Goals (SDGs), yakni Good Health and Well-Being, PNM juga memperhatikan kecukupan gizi serta kesehatan jasmani para ibu nasabah.

2. Kegiatan penyuluhan ini menjadi lonceng pengingat akan pentingnya kesehatan ibu, anak, dan keluarga

Kasus stunting di Indonesia pun masih marak. Pemerintah menargetkan penurunan angka stunting hingga 14 persen pada 2024. Tidak sedikit isu ini menjadi bagian nasabah PNM yang mayoritas adalah ibu rumah tangga. Maka dari itu, kegiatan ini menjadi lonceng pengingat akan pentingnya kesehatan ibu, anak, dan keluarga.
\u201cKalau melihat ke sekeliling kita, masih banyak isu terjaminnya kesehatan dan gizi anak di seluruh Indonesia. Kami semakin sadar karena faktanya hal itu terjadi pada nasabah kami yang notabene adalah perempuan prasejahtera,\u201d ujar Prasetya Sayekti, Direktur Bisnis PT PNM.
"Maka dari itu, kami harap kegiatan ini dapat menjadi ruang untuk meningkatkan awareness ibu nasabah bahwa kesehatan ibu dan keluarga itu penting,\u201d katanya.
</string>
<string name="lbl_sel">Sel</string>
<string name="msg_setiap_orang_pa4">Setiap orang pasti mau memiliki bentuk tubuh ideal dan badan yang sehat. Namun, tidak semua orang memiliki waktu atau akses untuk pergi ke pusat kebugaran atau menggunakan peralatan mahal.
Ada alternatif yang efektif dan praktis untuk bisa mencapai body goal, yaitu dengan </string>
<string name="msg_dr_boyke_sudra">Dr. Boyke Sudrajat</string>
<string name="lbl_07_30_16_30">07.30 - 16.30</string>
<string name="lbl_kesehatan">Kesehatan</string>
<string name="lbl_power_by">Power by 
</string>
<string name="msg_setiap_orang_pa">Setiap orang pasti pernah mengalami kondisi mual, yakni rasa tidak nyaman di perut dan merasa ingin muntah. Mual bisa dipicu berbagai hal, seperti kondisi pencernaan tertentu, sedang hamil, mencium bau menyengat atau busuk, atau karena virus.
Terlepas dari penyebabnya, mual adalah kondisi tak mengenakkan yang pastinya ingin segera kamu atasi. Ada banyak cara mengatasi mual secara alami. Simak penjelasannya di berikut ini</string>
<string name="msg_setiap_orang_pa2">Setiap orang pasti pernah mengalami kondisi </string>
<string name="lbl_min">Min</string>
<string name="msg_setiap_orang_pa3">Setiap orang pasti mau memiliki bentuk tubuh ideal dan badan yang sehat. Namun, tidak semua orang memiliki waktu atau akses untuk pergi ke pusat kebugaran atau menggunakan peralatan mahal.
Ada alternatif yang efektif dan praktis untuk bisa mencapai body goal, yaitu dengan latihan kalistenik. Latihan kalistenik adalah jenis latihan yang menggunakan berat tubuh kamu sendiri sebagai beban.</string>
<string name="msg_7_dampak_buruk">\u201c7 Dampak Buruk Membawa HP ke Kamar Mandi, Bahayakan Kesehatan!\u201d</string>
<string name="lbl_kaskus">Kaskus</string>
<string name="msg_password_confir">Password Confirmation</string>
<string name="msg_error_password">ERROR: Password do not match!</string>
<string name="msg_total_jarak_tem">Total Jarak Tempuh ............................................................................. 8.1 KM
Total Pembakaran Kalori ...................................................................... 1.500 Kcal</string>
<string name="lbl_4_3212"> 4.321</string>
<string name="msg_minggu_09_okto">Minggu, 09 Oktober 2023</string>
<string name="lbl_start">START</string>
<string name="msg_penyuluhan_dila">Penyuluhan dilakukan kepada 15.000 lebih ibu nasabah PNM</string>
<string name="msg_melalui_divisi">Melalui Divisi Pengembangan Kapasitas Usaha (PKU) berbagai pelatihan, program, dan pertemuan diperuntukkan kepada 14,6 juta nasabah PNM agar dapat terus mengembangkan usahanya.
Di sisi lain, PNM juga memperhatikan berbagai aspek yang dapat mendukung peningkatan kesejahteraan nasabahnya. Mengacu pada Poin 3 Sustainable Development Goals (SDGs), yakni Good Health and Well-Being, PNM juga memperhatikan kecukupan gizi serta kesehatan jasmani para ibu nasabah.

</string>
<string name="msg_banyak_orang_ti">Banyak orang tidak bisa lepas dari HP. Mereka membawa HP ke mana pun dan kapan pun, bahkan hingga ke kamar mandi. Misalnya, saat sedang buang air besar, banyak orang sengaja membawa HP yang digunakan untuk scrolling media sosial, membaca pesan singkat, menonton video YouTube, dan sebagainya. Namun, apakah kebiasaan membawa HP ke kamar mandi dapat dibenarkan?</string>
<string name="lbl_notifikasi">Notifikasi</string>
<string name="lbl_my_page">My page</string>
<string name="msg_yuk_pertimbangk">Yuk Pertimbangkan Untuk Mencari Bantuan Profesional

Berdasarkan hasil screening kesehatan mental, menunjukkan adanya gejala permasalahan psikologis yang menggumu saat ini. Bunda sangat menyarankan kamu untuk menemui psikolog atau psikiater terdekat di kotamu. Apalagi jika apa yang kamu rasakan sudah mengganggu produktivitas dan keseharian kamu. Namun tidak perlu khawatir, selama kamu niat dan berkomitmen untuk mendapatkan pertolongan dari profesional maka bisa merubah kondisimu.</string>
<string name="lbl_activity_cal">Activity Cal</string>
<string name="msg_bambang_suderaj">Bambang Suderajat</string>
<string name="msg_kasus_stunting">Kasus stunting di Indonesia pun masih marak. Pemerintah menargetkan penurunan angka stunting hingga 14 persen pada 2024. Tidak sedikit isu ini menjadi bagian nasabah PNM yang mayoritas adalah ibu rumah tangga. Maka dari itu, kegiatan ini menjadi lonceng pengingat akan pentingnya kesehatan ibu, anak, dan keluarga.
\u201cKalau melihat ke sekeliling kita, masih banyak isu terjaminnya kesehatan dan gizi anak di seluruh Indonesia. Kami semakin sadar karena faktanya hal itu terjadi pada nasabah kami yang notabene adalah perempuan prasejahtera,\u201d ujar Prasetya Sayekti, Direktur Bisnis PT PNM.
"Maka dari itu, kami harap kegiatan ini dapat menjadi ruang untuk meningkatkan awareness ibu nasabah bahwa kesehatan ibu dan keluarga itu penting,\u201d katanya.
</string>
<string name="lbl_pernyataan">Pernyataan</string>
<string name="msg_already_have_an2">Already have an account? </string>
<string name="lbl_active_time">Active Time</string>
<string name="msg_mengirimkan_art2">Mengirimkan artikel terbaru dalam Comunity
</string>
<string name="lbl_password">Password</string>
<string name="msg">*****************</string>
<string name="lbl_dokter_umum">Dokter Umum</string>
<string name="lbl_4_3">4.3</string>
<string name="msg_sign_up_for_fre">Sign Up For Free!</string>
<string name="msg_dr_boyke_sudra4">Dr. Boyke Sudrajat adalah dokter umum berpengalaman dengan latar belakang pendidikan medis yang kuat. Beliau memiliki sertifikasi dan lisensi yang sah. Dengan pengalaman luas dalam merawat berbagai kondisi kesehatan, Dr. Boyke Sudrajat ahli dalam diagnosis dan perawatan penyakit umum. Beliau fokus pada pencegahan dan memberikan edukasi kesehatan kepada pasien.</string>
<string name="lbl_sign_up2">Sign Up</string>
<string name="lbl_2_1_k">2.1 K</string>
<string name="lbl_offline">Offline</string>
<string name="msg_enter_your_emai">Enter your email address...</string>
<string name="msg_dr_ahmad_nuraf">Dr. Ahmad Nurafi</string>
<string name="msg_get_started_in">Get started in less than one minute and get your health personalized.</string>
</resources>