<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerOneVM" type="com.dessapplication.app.modules.registerone.data.viewmodel.RegisterOneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearRegisterOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnlogopillow"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylebluegray_900cornerRadius">
            <FrameLayout android:id="@+id/frameLogomark"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_34pxv"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_51pxv" android:layout_width="@dimen/_34pxh">
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_4_5"
                    android:id="@+id/viewLogoPillow"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_10pxv"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_12pxv" android:layout_width="@dimen/_14pxh"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_4_5"
                    android:id="@+id/viewLogoPillowOne"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_10pxv"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_12pxv" android:layout_width="@dimen/_14pxh"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_4_5"
                    android:id="@+id/viewLogoPillowTwo"
                    android:layout_gravity="bottom|center"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_10pxh"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_4_5"
                    android:id="@+id/viewLogoPillowThree"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh" android:layout_width="@dimen/_10pxh"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtText"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true"
                android:text="@{registerOneVM.registerOneModel.txtText}"
                style="@style/txtPlusJakartaSansplusjakartasansextrabold30" tools:text="@string/msg_sign_up_for_fre"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtTextOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_35pxv"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:text="@{registerOneVM.registerOneModel.txtTextOne}"
                style="@style/txtPlusJakartaSansplusjakartasansmedium16" tools:text="@string/msg_get_started_in"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtName"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_59pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerOneVM.registerOneModel.txtName}"
            style="@style/txtPlusJakartaSansplusjakartasansextrabold14" tools:text="@string/lbl_email_address"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_900_radius_12"
            android:drawablePadding="@dimen/_11pxh"
            android:drawableStart="@drawable/img_mail"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_emai"
            android:id="@+id/etContent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={registerOneVM.registerOneModel.etContentValue}"
            android:textColorHint="@color/gray_300"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtNameOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerOneVM.registerOneModel.txtNameOne}"
            style="@style/txtPlusJakartaSansplusjakartasansextrabold14" tools:text="@string/lbl_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_900_radius_12"
            android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:drawableStart="@drawable/img_monotone_gender_male"
            android:ellipsize="end" android:hint="@string/msg"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_17pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={registerOneVM.registerOneModel.etPasswordValue}"
            android:textColorHint="@color/gray_300"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtNameTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerOneVM.registerOneModel.txtNameTwo}"
            style="@style/txtPlusJakartaSansplusjakartasansextrabold14" tools:text="@string/msg_password_confir"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_900_radius_12"
            android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:drawableStart="@drawable/img_monotone_gender_male"
            android:ellipsize="end" android:hint="@string/msg"
            android:id="@+id/etPasswordOne"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_17pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={registerOneVM.registerOneModel.etPasswordOneValue}"
            android:textColorHint="@color/gray_300"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up2"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up2"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{registerOneVM.registerOneModel.txtConfirmation}"
            style="@style/txtPlusJakartaSansplusjakartasanssemibold14" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
